trace-grapher/provision-k8s/istio-system-gateway.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-system-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts: [ "*" ]
    port:
      number: 8888
      name: http-monitoring
      protocol: HTTP

#
# KIALI
#
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
  namespace: istio-system
spec:
  hosts: [ "*" ]
  gateways:
  - istio-system-gateway
  http:
  - match:
    - uri:
        prefix: /kiali
    route:
    - destination:
        host: kiali
        port:
          number: 20001


---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kiali
  namespace: istio-system
spec:
  host: kiali
  trafficPolicy:
    tls:
      mode: DISABLE

#
# JAEGER
#
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  namespace: istio-system
spec:
  selector:
    app: jaeger
  ports:
  - name: http-zipkin
    port: 9411
    targetPort: 9411


---
apiVersion: v1
kind: Service
metadata:
  name: tracing
  namespace: istio-system
spec:
  selector:
    app: jaeger
  ports:
  - name: http-jaeger-query
    port: 80
    targetPort: 16686


---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger
  namespace: istio-system
spec:
  gateways:
  - istio-system-gateway
  hosts: [ "*" ]
  http:
  - match:
    - uri:
        prefix: /jaeger
    route:
    - destination:
        host: jaeger-query
        port:
          number: 16686


---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: jaeger
  namespace: istio-system
spec:
  host: jaeger-query
  trafficPolicy:
    tls:
      mode: DISABLE

#
# PROMETHEUS
#
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
  namespace: istio-system
spec:
  hosts: [ "*" ]
  gateways:
  - istio-system-gateway
  http:
  - match:
    - uri:
        prefix: /prometheus
    route:
    - destination:
        host: prometheus
        port:
          number: 9090


---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: prometheus
  namespace: istio-system
spec:
  host: prometheus
  trafficPolicy:
    tls:
      mode: DISABLE

#
# GRAFANA
#
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts: [ "*" ]
  gateways:
  - istio-system-gateway
  http:
  - match:
    - uri:
        prefix: /grafana/
    - uri:
        prefix: /grafana
    rewrite:
      uri: /
    route:
    - destination:
        host: grafana
        port:
          number: 3000


---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: grafana
  namespace: istio-system
spec:
  host: grafana
  trafficPolicy:
    tls:
      mode: DISABLE
